--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <header>
-<h1>Boas Práticas</h1>
+    <h1>Boas Práticas</h1>
 </header>
 <section>
-<p>Imagina o barulho ensurdecedor dos motores na largada, é de arrepiar! Os carros de Fórmula 1 são como foguetes no asfalto, voando baixo nas retas e grudando no chão nas curvas. Cada piloto tenta ser mais esperto que o outro, buscando uma brechinha para ultrapassar. A troca de pneus no pit stop é um espetáculo à parte, uma correria de poucos segundos que pode mudar tudo. É uma briga intensa por cada posição, onde qualquer errinho custa caro. A tensão vai até a última volta, com o coração na mão. No final, ver a bandeira quadriculada é um alívio e uma explosão de alegria para o vencedor. É pura adrenalina e estratégia do começo ao fim, um programão para o domingo.</p>
+    <p>bla bla</p>
 </section>
 <footer>
-<p>&copy; 2025 Todos os direitos reservados</p>
+    <p>&copy; 2025 Todos os direitos reservados</p>
 </footer>
 </body>
 </html>
