--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boas Práticas</title>
+    <title>formula 1</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-    <h1>Boas Práticas</h1>
+    <h1>formula 1 </h1>
 </header>
 <section>
-    <p>bla bla</p>
+    <p>A Fórmula 1 é a categoria máxima do automobilismo mundial, reunindo os pilotos mais talentosos e as equipes mais inovadoras. Com os carros de corrida mais rápidos e avançados do planeta, a competição busca os campeões mundiais de Pilotos e de Construtores. As corridas, chamadas de Grandes Prêmios, acontecem em circuitos icônicos ao redor do globo. O sucesso não depende apenas da velocidade, mas também de estratégias complexas envolvendo pneus e paradas nos boxes.</p>
 </section>
 <footer>
     <p>&copy; 2025 Todos os direitos reservados</p>
