--- a/index.html
+++ b/index.html
@@ -11,7 +11,58 @@
     <h1>formula 1 </h1>
 </header>
 <section>
-    <p>A Fórmula 1 é a categoria máxima do automobilismo mundial, reunindo os pilotos mais talentosos e as equipes mais inovadoras. Com os carros de corrida mais rápidos e avançados do planeta, a competição busca os campeões mundiais de Pilotos e de Construtores. As corridas, chamadas de Grandes Prêmios, acontecem em circuitos icônicos ao redor do globo. O sucesso não depende apenas da velocidade, mas também de estratégias complexas envolvendo pneus e paradas nos boxes.</p>
+    <p>A Fórmula 1 (F1) é amplamente considerada o auge do automobilismo mundial. Mais do que apenas uma corrida, é uma combinação complexa de alta tecnologia, habilidade de pilotagem, estratégia de equipe e glamour global. Desde sua estreia em 1950, a categoria evoluiu drasticamente, transformando-se em um espetáculo multibilionário acompanhado por milhões de fãs.
+
+### Uma Breve História
+
+O campeonato mundial teve sua corrida inaugural em Silverstone, Reino Unido, em 13 de maio de 1950. A "fórmula" no nome refere-se a um conjunto de regras que todos os carros participantes devem seguir. Nos seus primórdios, equipes como Alfa Romeo, Ferrari e Maserati dominaram, com pilotos lendários como o argentino Juan Manuel Fangio, que conquistou cinco títulos nos anos 50.
+
+As décadas seguintes trouxeram inovações tecnológicas significativas:
+* **Anos 60/70:** Vimos a introdução de motores traseiros, chassis monocoque e o início do estudo da aerodinâmica, com asas rudimentares.
+* **Anos 80/90:** A era turbo trouxe potências impressionantes, seguida por avanços em eletrônica, como suspensão ativa e controle de tração. Foi também a era de rivalidades icônicas, como a de Ayrton Senna e Alain Prost.
+* **Anos 2000:** Marcados pelo domínio de Michael Schumacher e da Ferrari, que estabeleceram recordes de títulos.
+* **Anos 2010:** A introdução das unidades de potência híbridas em 2014 iniciou um período de domínio da Mercedes e de Lewis Hamilton, que igualou muitos dos recordes de Schumacher.
+
+### Como Funciona a F1?
+
+Um fim de semana de Grande Prêmio (GP) é um evento estruturado que geralmente dura três dias:
+
+1.  **Treinos Livres:** Sessões onde as equipes testam diferentes configurações do carro, pneus e estratégias.
+2.  **Qualificação (Classificação):** Define a ordem de largada (grid). É dividida em três partes (Q1, Q2 e Q3). A cada parte, os pilotos mais lentos são eliminados, até que os 10 mais rápidos disputem a *pole position* (primeiro lugar) no Q3.
+3.  **A Corrida:** O evento principal, realizado no domingo. Os pilotos competem por um número definido de voltas, e os 10 primeiros a cruzar a linha de chegada marcam pontos.
+
+**Sistema de Pontos (Corrida Principal):**
+* **1º lugar:** 25 pontos
+* **2º lugar:** 18 pontos
+* **3º lugar:** 15 pontos
+* **4º lugar:** 12 pontos
+* **5º lugar:** 10 pontos
+* **6º lugar:** 8 pontos
+* **7º lugar:** 6 pontos
+* **8º lugar:** 4 pontos
+* **9º lugar:** 2 pontos
+* **10º lugar:** 1 ponto
+
+Existem dois campeonatos disputados simultaneamente: o **Mundial de Pilotos** e o **Mundial de Construtores** (equipes), que soma os pontos dos dois pilotos de cada equipe ao longo da temporada.
+
+### Pilotos e Equipes Lendárias
+
+A F1 é feita de heróis e equipes que se tornaram sinônimos de velocidade.
+
+* **Pilotos Icônicos:**
+    * **Lewis Hamilton** e **Michael Schumacher:** Ambos heptacampeões mundiais, detentores de múltiplos recordes.
+    * **Juan Manuel Fangio:** Dominante nos anos 50 com cinco títulos.
+    * **Ayrton Senna:** Tricampeão brasileiro, conhecido por sua velocidade pura e habilidade na chuva.
+    * **Alain Prost:** Tetracampeão francês, famoso por sua abordagem cerebral, apelidado de "O Professor".
+    * Outros nomes como **Niki Lauda**, **Nelson Piquet**, **Jackie Stewart** e, mais recentemente, **Sebastian Vettel** e **Max Verstappen**, também marcaram seus nomes na história.
+
+* **Equipes de Destaque:**
+    * **Ferrari:** A única equipe a ter competido em todas as temporadas desde 1950. É a mais vitoriosa e icônica do grid.
+    * **McLaren:** Uma potência histórica, casa de lendas como Senna, Prost e Hamilton.
+    * **Williams:** Dominou partes das décadas de 80 e 90, conhecida por sua engenharia inovadora.
+    * **Mercedes:** Dominou a era híbrida (2014-2021), conquistando oito títulos de construtores consecutivos.
+    * **Red Bull Racing:** Tornou-se uma força dominante nos anos 2010 com Vettel e, mais recentemente, com Max Verstappen.
+A Fórmula 1 continua a ser um laboratório de ponta para a tecnologia automotiva, impulsionando inovações em eficiência de motores, aerodinâmica e segurança que, eventualmente, chegam aos carros de rua. É um esporte que exige perfeição de engenharia e coragem humana, cativando fãs em todo o mundo.</p>
 </section>
 <footer>
     <p>&copy; 2025 Todos os direitos reservados</p>
