--- a/index.html
+++ b/index.html
@@ -11,58 +11,14 @@
     <h1>formula 1 </h1>
 </header>
 <section>
-    <p>A Fórmula 1 (F1) é amplamente considerada o auge do automobilismo mundial. Mais do que apenas uma corrida, é uma combinação complexa de alta tecnologia, habilidade de pilotagem, estratégia de equipe e glamour global. Desde sua estreia em 1950, a categoria evoluiu drasticamente, transformando-se em um espetáculo multibilionário acompanhado por milhões de fãs.
+    <p>A Fórmula 1 é a elite do automobilismo mundial, uma competição que combina tecnologia de ponta, velocidade extrema e os pilotos mais talentosos do planeta. Correndo em circuitos icônicos ao redor do globo, equipes como Ferrari, Mercedes e Red Bull batalham não apenas pela glória nas pistas, mas também pelo desenvolvimento de inovações que chegam aos carros de rua.</p>
+    <p>Para o Brasil, a F1 é uma paixão nacional, marcada por uma era de ouro. O país produziu três campeões mundiais que se tornaram lendas: Emerson Fittipaldi (2 títulos), Nelson Piquet (3 títulos) e, o maior ídolo, Ayrton Senna (3 títulos), cuja habilidade e carisma transcenderam o esporte. Pilotos como Rubens Barrichello e Felipe Massa também tiveram carreiras de grande destaque, mantendo a tradição brasileira de competitividade e vitórias por décadas. Embora atualmente o país não tenha um piloto titular, o legado e a torcida fervorosa garantem que a história do Brasil e da Fórmula 1 permaneçam profundamente entrelaçadas.</p>
+    <p>A saga brasileira começou de fato com Emerson Fittipaldi. Ele não foi apenas o primeiro brasileiro a vencer um campeonato (1972), mas também o mais jovem campeão da época. Com seu estilo arrojado, Fittipaldi repetiu o feito em 1974 e inspirou uma geração, provando que pilotos do país podiam competir e vencer no mais alto nível. Sua ousadia se estendeu ao criar a única equipe brasileira na história da F1, a Copersucar-Fittipaldi, um projeto que, embora difícil, demonstrou a paixão e o pioneirismo do "Rato</p>
+    <p>Logo depois, surgiu Nelson Piquet, um piloto conhecido tanto por sua velocidade quanto por sua inteligência técnica e personalidade forte. Piquet conquistou seus três campeonatos (1981, 1983, 1987) em uma era de grande competitividade, notabilizando-se pela habilidade no desenvolvimento dos carros e por suas táticas de corrida. Suas batalhas épicas, especialmente contra Nigel Mansell, marcaram os anos 80 e consolidaram o Brasil como uma potência constante na categoria</p>
+    <p>Então, veio Ayrton Senna. Mais do que um piloto, Senna tornou-se um ícone global e um herói nacional. Seus três títulos (1988, 1990, 1991) foram conquistados com um estilo de pilotagem visceral e uma determinação quase mística, especialmente em condições de chuva. Sua rivalidade lendária com Alain Prost é um dos capítulos mais dramáticos da história do esporte. O impacto de Senna transcendeu as pistas; ele trouxe alegria e orgulho ao Brasil em tempos difíceis, e seu legado de excelência e paixão perdura até hoje.
 
-### Uma Breve História
 
-O campeonato mundial teve sua corrida inaugural em Silverstone, Reino Unido, em 13 de maio de 1950. A "fórmula" no nome refere-se a um conjunto de regras que todos os carros participantes devem seguir. Nos seus primórdios, equipes como Alfa Romeo, Ferrari e Maserati dominaram, com pilotos lendários como o argentino Juan Manuel Fangio, que conquistou cinco títulos nos anos 50.
-
-As décadas seguintes trouxeram inovações tecnológicas significativas:
-* **Anos 60/70:** Vimos a introdução de motores traseiros, chassis monocoque e o início do estudo da aerodinâmica, com asas rudimentares.
-* **Anos 80/90:** A era turbo trouxe potências impressionantes, seguida por avanços em eletrônica, como suspensão ativa e controle de tração. Foi também a era de rivalidades icônicas, como a de Ayrton Senna e Alain Prost.
-* **Anos 2000:** Marcados pelo domínio de Michael Schumacher e da Ferrari, que estabeleceram recordes de títulos.
-* **Anos 2010:** A introdução das unidades de potência híbridas em 2014 iniciou um período de domínio da Mercedes e de Lewis Hamilton, que igualou muitos dos recordes de Schumacher.
-
-### Como Funciona a F1?
-
-Um fim de semana de Grande Prêmio (GP) é um evento estruturado que geralmente dura três dias:
-
-1.  **Treinos Livres:** Sessões onde as equipes testam diferentes configurações do carro, pneus e estratégias.
-2.  **Qualificação (Classificação):** Define a ordem de largada (grid). É dividida em três partes (Q1, Q2 e Q3). A cada parte, os pilotos mais lentos são eliminados, até que os 10 mais rápidos disputem a *pole position* (primeiro lugar) no Q3.
-3.  **A Corrida:** O evento principal, realizado no domingo. Os pilotos competem por um número definido de voltas, e os 10 primeiros a cruzar a linha de chegada marcam pontos.
-
-**Sistema de Pontos (Corrida Principal):**
-* **1º lugar:** 25 pontos
-* **2º lugar:** 18 pontos
-* **3º lugar:** 15 pontos
-* **4º lugar:** 12 pontos
-* **5º lugar:** 10 pontos
-* **6º lugar:** 8 pontos
-* **7º lugar:** 6 pontos
-* **8º lugar:** 4 pontos
-* **9º lugar:** 2 pontos
-* **10º lugar:** 1 ponto
-
-Existem dois campeonatos disputados simultaneamente: o **Mundial de Pilotos** e o **Mundial de Construtores** (equipes), que soma os pontos dos dois pilotos de cada equipe ao longo da temporada.
-
-### Pilotos e Equipes Lendárias
-
-A F1 é feita de heróis e equipes que se tornaram sinônimos de velocidade.
-
-* **Pilotos Icônicos:**
-    * **Lewis Hamilton** e **Michael Schumacher:** Ambos heptacampeões mundiais, detentores de múltiplos recordes.
-    * **Juan Manuel Fangio:** Dominante nos anos 50 com cinco títulos.
-    * **Ayrton Senna:** Tricampeão brasileiro, conhecido por sua velocidade pura e habilidade na chuva.
-    * **Alain Prost:** Tetracampeão francês, famoso por sua abordagem cerebral, apelidado de "O Professor".
-    * Outros nomes como **Niki Lauda**, **Nelson Piquet**, **Jackie Stewart** e, mais recentemente, **Sebastian Vettel** e **Max Verstappen**, também marcaram seus nomes na história.
-
-* **Equipes de Destaque:**
-    * **Ferrari:** A única equipe a ter competido em todas as temporadas desde 1950. É a mais vitoriosa e icônica do grid.
-    * **McLaren:** Uma potência histórica, casa de lendas como Senna, Prost e Hamilton.
-    * **Williams:** Dominou partes das décadas de 80 e 90, conhecida por sua engenharia inovadora.
-    * **Mercedes:** Dominou a era híbrida (2014-2021), conquistando oito títulos de construtores consecutivos.
-    * **Red Bull Racing:** Tornou-se uma força dominante nos anos 2010 com Vettel e, mais recentemente, com Max Verstappen.
-A Fórmula 1 continua a ser um laboratório de ponta para a tecnologia automotiva, impulsionando inovações em eficiência de motores, aerodinâmica e segurança que, eventualmente, chegam aos carros de rua. É um esporte que exige perfeição de engenharia e coragem humana, cativando fãs em todo o mundo.</p>
+    <p>llll</p>
 </section>
 <footer>
     <p>&copy; 2025 Todos os direitos reservados</p>
