--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 </head>
 <body>
 <header>
-    <h1>formula 1 </h1>
+    <h1>Formula 1 </h1>
 </header>
 <section>
     <p>A Fórmula 1 é a elite do automobilismo mundial, uma competição que combina tecnologia de ponta, velocidade extrema e os pilotos mais talentosos do planeta. Correndo em circuitos icônicos ao redor do globo, equipes como Ferrari, Mercedes e Red Bull batalham não apenas pela glória nas pistas, mas também pelo desenvolvimento de inovações que chegam aos carros de rua.</p>
     <p>Para o Brasil, a F1 é uma paixão nacional, marcada por uma era de ouro. O país produziu três campeões mundiais que se tornaram lendas: Emerson Fittipaldi (2 títulos), Nelson Piquet (3 títulos) e, o maior ídolo, Ayrton Senna (3 títulos), cuja habilidade e carisma transcenderam o esporte. Pilotos como Rubens Barrichello e Felipe Massa também tiveram carreiras de grande destaque, mantendo a tradição brasileira de competitividade e vitórias por décadas. Embora atualmente o país não tenha um piloto titular, o legado e a torcida fervorosa garantem que a história do Brasil e da Fórmula 1 permaneçam profundamente entrelaçadas.</p>
     <p>A saga brasileira começou de fato com Emerson Fittipaldi. Ele não foi apenas o primeiro brasileiro a vencer um campeonato (1972), mas também o mais jovem campeão da época. Com seu estilo arrojado, Fittipaldi repetiu o feito em 1974 e inspirou uma geração, provando que pilotos do país podiam competir e vencer no mais alto nível. Sua ousadia se estendeu ao criar a única equipe brasileira na história da F1, a Copersucar-Fittipaldi, um projeto que, embora difícil, demonstrou a paixão e o pioneirismo do "Rato</p>
     <p>Logo depois, surgiu Nelson Piquet, um piloto conhecido tanto por sua velocidade quanto por sua inteligência técnica e personalidade forte. Piquet conquistou seus três campeonatos (1981, 1983, 1987) em uma era de grande competitividade, notabilizando-se pela habilidade no desenvolvimento dos carros e por suas táticas de corrida. Suas batalhas épicas, especialmente contra Nigel Mansell, marcaram os anos 80 e consolidaram o Brasil como uma potência constante na categoria</p>
-    <p>Então, veio Ayrton Senna. Mais do que um piloto, Senna tornou-se um ícone global e um herói nacional. Seus três títulos (1988, 1990, 1991) foram conquistados com um estilo de pilotagem visceral e uma determinação quase mística, especialmente em condições de chuva. Sua rivalidade lendária com Alain Prost é um dos capítulos mais dramáticos da história do esporte. O impacto de Senna transcendeu as pistas; ele trouxe alegria e orgulho ao Brasil em tempos difíceis, e seu legado de excelência e paixão perdura até hoje.
-
-
-    <p>llll</p>
-</section>
+    <p>Então, veio Ayrton Senna. Mais do que um piloto, Senna tornou-se um ícone global e um herói nacional. Seus três títulos (1988, 1990, 1991) foram conquistados com um estilo de pilotagem visceral e uma determinação quase mística, especialmente em condições de chuva. Sua rivalidade lendária com Alain Prost é um dos capítulos mais dramáticos da história do esporte. O impacto de Senna transcendeu as pistas; ele trouxe alegria e orgulho ao Brasil em tempos difíceis, e seu legado de excelência e paixão perdura até hoje.</p> 
+</section
 <footer>
     <p>&copy; 2025 Todos os direitos reservados</p>
 </footer>
